--- a/Bizord/Bizord_Main_Files_v1-2/Bizord_HTML_1_2/index.html
+++ b/Bizord/Bizord_Main_Files_v1-2/Bizord_HTML_1_2/index.html
@@ -46,14 +46,14 @@
 		                    <a class="nav-link fadeinleftbig hidden delay3" data-scroll href="#price-part">Когда?</a>
 		                </li>
 		                <li class="nav-item">
-		                    <a class="nav-link fadeinleftbig hidden delay4" data-scroll href="#news-part">Социальные сети</a>
+		                    <a class="nav-link fadeinleftbig hidden delay4" data-scroll href="#contact-part">Социальные сети</a>
 		                </li>
 		                <li class="nav-item">
 		                    <a class="nav-link fadeinleftbig hidden delay5" data-scroll href="#contact-part">Партнерам</a>
 		                </li>
-		                <li class="nav-item">
-		                	<a href= "C:\Users\sirius\Desktop\Bizord\reg.html.html" class="quote-btn animall open-popup-link fadeinleftbig hidden delay6" id="quote-btn" data-effect="mfp-move-horizontal">Зарегистрироваться</a>
-		                </li>
+		                <!--<li class="nav-item">
+		                	<a href= "images/reg.html" class="quote-btn animall open-popup-link fadeinleftbig hidden delay6" id="quote-btn" data-effect="mfp-move-horizontal">Зарегистрироваться</a>
+		                </li> -->
 		            </ul>
 		        </div>
   			</div>
@@ -157,7 +157,7 @@
 							<p class="banner-heading mb-0">GRANATE<span> ОТКРОЙ СЕБЯ ПО НОВОМУ</span></p>
 							<h1 class="head-one"></h1>
 							<p class="banner-p">Мы создаём виртуальную реальность с возможностью попробовать профессию для людей, заинтересованных в определении своего пути.</p>
-							<a href=C:\Users\sirius\Desktop\Bizord\reg.html.html class="started-btn animall">Хочу попробовать</a>
+							<a href=images/reg.html class="started-btn animall">Хочу попробовать</a>
 						</div>
 					</div>
 					<div class="col-xs-12 col-lg-6 img-box order-1 order-lg-2 fadeInRight hidden">
@@ -678,9 +678,9 @@
 						<a href="index.html"><img src="images/logo.png" alt="logo"></a>
 						<p class="footer-p">СЛЕДИТЕ ЗА СТАРТОМ В СЕТЯХ</p>
 						<div class="social-media">	
-							<a href="javascript:void(0)"><i class="fa fa-vk"></i></a>
-							<a href="javascript:void(0)"><i class="fa fa-telegram"></i></a>	
-							<a href="javascript:void(0)"><i class="fa fa-dzen"></i></a> 
+							<a href= https://vk.com ><i class="fa fa-vk"></i></a>
+							<a href= https://desktop.telegram.org/><i class="fa fa-telegram"></i></a>
+							<a href=https://dzen.ru/><img src='images/123.png' ></a>
 						</div>
 					</div>
 					
